<resources>
    <string name="AppName">YuanChengPingTai</string>
    <string name="LanguageName">English</string>
    <string name="LanguageNameInEnglish">English</string>
    <string name="LanguageCode">en</string>
    <string name="YourPhone">Your phone</string>
    <string name="StartText">Please confirm your country or area code \n and enter your phone number.</string>
    <string name="ChooseCountry">Select your country</string>
    <string name="WrongCountry">Wrong country code</string>
    <string name="YourCode">Your code</string>
    <string name="SentSmsCode">Your activation code will be sent to your cellphone through text message\n</string>
    <string name="CallText">If you didn’t receive the message, the system will send the message again in %1$s seconds</string>
    <string name="Calling">The message has been sent to you, please check</string>
    <string name="CallEmailText">We’ve already sent the email with your activation code to your mailbox, please check</string>
    <string name="CallingEmailText">We’ve already sent the email with your activation code to your mailbox again</string>
    <string name="Code">Please enter your verification code</string>
    <string name="WrongNumber">Forgot your password?</string>
    <string name="WrongEmail"> Number or email is wrong. Please select again</string>
    <string name="YourName">Your name</string>
    <string name="RegisterText">Set your name and password</string>
    <string name="RegisterTextResetPwd">Set your new password</string>
    <string name="FirstName">Name (required)</string>
    <string name="LastName">Last name (required)</string>
    <string name="Password">Password</string>
    <string name="Repassword">Enter your password again</string>
    <string name="PleaseEnter">Please enter </string>
    <string name="And"> And </string>
    <string name="Account">Username</string>
    <string name="onlyFirstName">Name</string>
    <string name="onlyLastName">Last name</string>
    <string name="CancelRegistration">Cancel registration</string>
    <string name="Chats">Chats</string>
    <string name="Search">Search</string>
    <string name="NewMessages">New Message</string>
    <string name="NewForum">Create a new post</string>
    <string name="Forum">Find</string>
    <string name="Settings">Settings</string>
    <string name="Contacts">Contacts</string>
    <string name="Chat">Chats</string>
    <string name="Discuss">Find</string>
    <string name="Meeting">Conference</string>
    <string name="NewGroup">New Group</string>
    <string name="Yesterday">yesterday</string>
    <string name="NoResult">No results</string>
    <string name="NoChats">No chat message</string>
    <string name="NoChatsHelp">please select a contact to chat with</string>
    <string name="WaitingForNetwork">Please check your internet connection, and try again later</string>
    <string name="Connecting">Connecting...</string>
    <string name="Updating">Updating...</string>
    <string name="Connected">Your connection is successful</string>
    <string name="NewSecretChat">New private chat</string>
    <string name="Work">work</string>
    <string name="AwaitingEncryption">Waiting for %s to get online...</string>
    <string name="EncryptionRejected">Private chat cancelled</string>
    <string name="EncryptionProcessing">Exchange password key...</string>
    <string name="EncryptedChatStartedOutgoing">%s joined your private chat.</string>
    <string name="EncryptedChatStartedIncoming">You joined the private chat.</string>
    <string name="ClearHistory">Clear history</string>
    <string name="DeleteChat">Delete and quit</string>
    <string name="HiddenName">Hide Name</string>
    <string name="SelectChat">Select your chat</string>
    <string name="NotSameCompany">Users in one group should be in the same company</string>
    <string name="SelectFile">Select File</string>
    <string name="FreeOfTotal">release in %2$s</string>
    <string name="UnknownError">Unidentified error</string>
    <string name="AccessError">Browse mistake</string>
    <string name="NoFiles">No file...</string>
    <string name="FileUploadLimit">The size of the file cannot be larger than %1$s</string>
    <string name="NotMounted">No storage</string>
    <string name="UsbActive">USB transfer is active</string>
    <string name="InternalStorage">Internal Storage</string>
    <string name="ExternalStorage">External Storage</string>
    <string name="SystemRoot">System root directory</string>
    <string name="SdCard">SD card</string>
    <string name="Invisible">invisible</string>
    <string name="Typing">typing...</string>
    <string name="Attach">Attach</string>
    <string name="IsTyping">is typing...</string>
    <string name="AreTyping">are typing...</string>
    <string name="AndMoreTyping">and %d more people</string>
    <string name="GotAQuestion">Questions about weiyi?</string>
    <string name="ChatTakePhoto">Taking pictures</string>
    <string name="ChatGallery">Photo album</string>
    <string name="ChatLocation">Location</string>
    <string name="ChatVideo">Video call</string>
    <string name="AudioInput">Speech input</string>
    <string name="ChatDocument">File</string>
    <string name="ChatAudioCall">Voice call</string>
    <string name="NoMessages">No message at this moment</string>
    <string name="ViewPhoto">View Photo</string>
    <string name="ViewLocation">View the picture</string>
    <string name="ViewVideo">Play the video</string>
    <string name="ForwardedMessage">Forward the message</string>
    <string name="From">From</string>
    <string name="NoRecent">No recently</string>
    <string name="Members">members</string>
    <string name="Message">Message</string>
    <string name="TypeMessage">Enter the message</string>
    <string name="DOWNLOAD">Download</string>
    <string name="Selected">Selected:</string>
    <string name="ShareMyContactInfo">Share my contact information</string>
    <string name="AddToContacts">ADD TO CONTACTS</string>
    <string name="EncryptedPlaceholderTitleIncoming">%s invited you to join a secret chat.</string>
    <string name="EncryptedPlaceholderTitleOutgoing">You have invited %s to join a secret chat.</string>
    <string name="EncryptedDescriptionTitle">Secret chats:</string>
    <string name="EncryptedDescription1">Use end-to-end encryption</string>
    <string name="EncryptedDescription2">Leave no trace on our servers</string>
    <string name="EncryptedDescription3">Have a self-destruct timer</string>
    <string name="EncryptedDescription4">Do not allow forwarding</string>
    <string name="OneNewMessage">%1$d new message</string>
    <string name="FewNewMessages">%1$d new messages</string>
    <string name="YouWereKicked">You were removed from this group</string>
    <string name="YouLeft">You left this group</string>
    <string name="DeleteThisGroup">Delete this group</string>
    <string name="SlideToCancel">Slide to canel</string>
    <string name="SaveToDownloads">Save to downloads</string>
    <string name="ApplyLocalizationFile">Apply localization file</string>
    <string name="EncryptedChatRequested">Secret chat requested</string>
    <string name="EncryptedChatAccepted">Secret chat started</string>
    <string name="MessageLifetimeChanged">%1$s set the self-destruct timer to %2$s</string>
    <string name="MessageLifetimeChangedOutgoing">You set the self-destruct timer to %1$s</string>
    <string name="MessageLifetimeRemoved">%1$s disabled the self-destruct timer</string>
    <string name="MessageLifetimeYouRemoved">You disabled the self-destruct timer</string>
    <string name="MessageLifetime2s">2 seconds</string>
    <string name="MessageLifetime5s">5 seconds</string>
    <string name="MessageLifetime1m">1 minute</string>
    <string name="MessageLifetime1h">1 hour</string>
    <string name="MessageLifetime1d">1 day</string>
    <string name="MessageLifetime1w">1 week</string>
    <string name="YouHaveNewMessage">You have a new message</string>
    <string name="NotificationMessageText">%1$s: %2$s</string>
    <string name="NotificationMessageNoText">%1$s sent a message to you</string>
    <string name="NotificationMessagePhoto">%1$s sent a picture to you</string>
    <string name="NotificationMessageVideo">%1$s sent a video to you</string>
    <string name="NotificationMessageContact">%1$s has shared contacts with you</string>
    <string name="NotificationMessageMap">%1$s has shared location with you</string>
    <string name="NotificationMessageDocument">%1$s has shared a document with you</string>
    <string name="NotificationMessageAudio">%1$s has shared a voice clip with you</string>
    <string name="NotificationMessageAlert"> %1$s has sent a reminder to you</string>
    <string name="NotificationMessageGroupText">%1$s @ %2$s: %3$s</string>
    <string name="NotificationMessageGroupNoText">%1$s has sent a message to the group %2$s</string>
    <string name="NotificationMessageGroupPhoto">%1$s has sent pictures to the group %2$s</string>
    <string name="NotificationMessageGroupVideo">%1$s has sent video to the group %2$s</string>
    <string name="NotificationMessageGroupContact">%1$s has shared contacts with the group %2$s</string>
    <string name="NotificationMessageGroupMap">%1$s has shared location with you %2$s</string>
    <string name="NotificationMessageGroupDocument">%1$s has sent files to the group %2$s</string>
    <string name="NotificationMessageGroupAudio">%1$s has sent voice clips to the group %2$s</string>
    <string name="NotificationInvitedToGroup">%1$s Invite you to the group %2$s</string>
    <string name="NotificationEditedGroupName">%1$s edited the group\'s %2$s name</string>
    <string name="NotificationEditedGroupPhoto">%1$s edited the group\'s %2$s photo</string>
    <string name="NotificationGroupAddMember">%1$s invited %3$s to the group %2$s</string>
    <string name="inputphonenumoremial">Enter your Email</string>
    <string name="hint_password">Enter your password</string>
    <string name="Login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="Phone_Login">Login with your cellphone number</string>
    <string name="sure">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="CreateGroup">Initiate group chat</string>
    <string name="AddFriend">Accept</string>
    <string name="RequestForAdd">Invite you to join</string>
    <string name="Added">Already added</string>
    <string name="Unlink">Unbonded</string>
    <string name="modifyEmailNotice">If you changed your email address, you need to verify your email address again.</string>
    <string name="PhoneUnlinkNotic1">You haven’t connected your cellphone</string>
    <string name="PhoneUnlinkNotic2">Connect your cellphone number can help you search your friend,improve account security</string>
    <string name="PhoneLink">Connect cellphone</string>
    <string name="MobileContacts">Check cellphone contacts</string>
    <string name="Invite">Invitation</string>
    <string name="DIR_Play_Back">Playback list</string>
    <string name="voicechattip">Online chat</string>
    <string name="official_website">Official website</string>
    <string name="check_update">Checking upgrade</string>
    <string name="copyright">yunboxin co.\u0020 Copyright ©\n
Copyright © 2011-2014 Yunboxin co.\n
All Rights Reserved.</string>
    <string name="Remind">Remind</string>
    <string name="str_companyid">Company account</string>
    <string name="direct_topic">Direct sending topic</string>
    <string name="direct_start_time">Start time</string>
    <string name="direct_pwd">Direct send password</string>
    <string name="direct_type">Direct sending type</string>
    <string name="start_direct">Start direct sending</string>
    <string name="direct_id">Direct sending id</string>
</resources>