<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <EditText
        android:id="@+id/email_phonenum_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:hint="@string/inputphonenumoremial" />

    <EditText
        android:id="@+id/login_passworld"
        android:layout_below="@id/email_phonenum_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/main_login_btn"
        android:layout_below="@id/login_passworld"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/regbtn_states"
        android:gravity="center"
        android:text="@string/Login"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_below="@id/main_login_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" 
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="#006400"
             
            />

        <TextView
            android:id="@+id/create_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textColor="#006400"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>
    
    
    <TextView
        android:id="@+id/phonenum_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#006400"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:text="@string/Phone_Login"
        />

</RelativeLayout>