<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_notic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="@color/gray"
        android:text="@string/modifyEmailNotice"
        android:textSize="@dimen/text_size_14" />

    <LinearLayout
        android:id="@+id/linlayout_link"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/AccountTvBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
             />

        <TextView
            android:id="@+id/tv_sure"
            style="@style/AccountTvBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sure"  />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_unlink"
        style="@style/AccountTvBtnStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Unlink" />

</LinearLayout>