<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <EditText 
        android:id="@+id/pub_com_companyid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_companyid"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"/>
    <EditText 
        android:id="@+id/pub_com_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/YourPhone"
        android:inputType="phone"
        android:layout_below="@id/pub_com_companyid"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"/>
    <EditText 
        android:id="@+id/pub_com_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:layout_below="@id/pub_com_phone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"/>

</RelativeLayout>
