<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/tv_vision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:drawableTop="@drawable/ic_log"
        android:gravity="center_horizontal"
        android:text="@string/AppName"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_17" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/linlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_web"
                style="@style/AboutTextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/official_website" />

            <View
                android:id="@+id/view1"
                style="@style/diverStyle" />

            <TextView
                android:id="@+id/tv_update"
                style="@style/AboutTextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_update" />

            <View
                android:id="@+id/View01"
                style="@style/diverStyle" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/copyright"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_12" />

</LinearLayout>