<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="blocksDescendants"
    android:focusable="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="8dip"
    android:paddingTop="8dip" >
	  
	    <info.emm.ui.Views.BackupImageView
	        android:id="@+id/iv_newfriend_head"
	        android:layout_width="54dp"
	        android:layout_height="54dp"
	        android:src="@drawable/default_fmessage" />

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center_vertical"
	        android:orientation="vertical"
	        android:padding="5dp" >

	        <TextView
	            android:id="@+id/tv_newfriend"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Name"
	            android:textSize="16sp" />

	        <TextView
	            android:id="@+id/tv_info"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/RequestForAdd"
	            android:textColor="@color/listitem_gray"
	            android:textSize="@dimen/space_14" />

	    </LinearLayout>

	    <TextView
	        android:id="@+id/tv_accept"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/btn_add_friend"
	        android:gravity="center"
	        android:padding="5dp"
	        android:text="@string/AddFriend"
	        android:textColor="@color/white" 
	        android:textSize="@dimen/space_14" />

	    <TextView
	        android:id="@+id/tv_added"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/Added"
	        android:textColor="@color/listitem_gray"
	        android:textSize="@dimen/space_12"
	        android:visibility="gone" />

	</LinearLayout>
